fixed flex properties so that images aligned evenly on a laptop screen

--- a/main.css
+++ b/main.css
@@ -68,12 +68,13 @@ ul, li {
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: space-evenly;
 }
 
 .image {
     width: 25%;
     height: 15%;
-    flex: 1 1 5%;
+    flex: 0 1 5%;
 }
 
 .description {
@@ -115,9 +116,10 @@ article {
     #quiz-app-screenshots, #horror-house-screenshots {
         flex-flow: row;
         justify-content: flex-start;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: space-evenly;
+        
     }
+    
 
     aside {
         display: flex;
